Fix image alignment

--- a/components/FeatureSummaryList/Item/index.module.scss
+++ b/components/FeatureSummaryList/Item/index.module.scss
@@ -64,7 +64,11 @@
     .link {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
+
+      @media (max-width: $mobile-width) {
+        align-items: center;
+      }
     }
 
     a.link {
